# fastapicore

./: Dockerfile  commands.txt  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
env/: db.env  fastapi.env
migrations/models/: 0_20210723200452_init.sql  1_20210723201703_update.sql  2_20210723201317_update.sql  3_20210725075625_update.sql  4_20210725080016_update.sql  5_20210729113325_update.sql  6_20210801182308_update.sql  7_20210808182118_update.sql
src/apps/: routers.py
src/apps/auth/: jwt.py  models.py  views.py
src/apps/users/: models.py  service.py  views.py
src/config/: settings.py  tortoise_conf.py
